--- a/portfolio.html
+++ b/portfolio.html
@@ -93,177 +93,8 @@
                     </div>
                 </div>
 
-                <div id="con-p1" class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
 
-                    <div id="imgSlide01" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide03"><a
-                            class="link-p1" href="https://arbab57.github.io/portfolio/" target="_blank"><img
-                                loading="lazy" id="img-p1" class="project-img"
-                                src="assets/projects/project-portfolio-1.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 id="sub-p1" class="fs-6 text-muted-3 mb-3">CSS3 & HTML</h3>
-                        <h3 class="fs-2 mb-4 fw-normal"><a id="main-p1" class="text-white link-p1"
-                                href="https://arbab57.github.io/portfolio/" target="_blank">Design
-                                Portfolio: Where
-                                Art Meets
-                                Code</a></h3>
-                        <p id="desc-p1" class="fs-5 text-muted-3 mb-4">I built a stunning design portfolio website to
-                            showcase my
-                            creative journey and highlight my expertise in web development. This project was a labor of
-                            love, allowing me to combine my passion for design and coding to create a truly unique and
-                            interactive experience.</p>
-                        <a id="view-p1" class="text-blue-1 fs-5 link-p1" href="https://arbab57.github.io/portfolio/"
-                            target="_blank">View
-                            Project</a>
-                    </div>
-
-
-                </div>
-
-
-
-
-                <div id="con-p2" class="row justify-content-center flex-row-reverse gap-lg-4 p-lg-5 text-sm-start">
-                    <div id="imgSlide02" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide "><a
-                            class="link-p2" href="https://arbab57.github.io/onlineCourses/" target="_blank"><img
-                                loading="lazy" id="img-p2" class="project-img"
-                                src="assets/projects/project- courses.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 id="sub-p2" class="fs-6 text-muted-3 mb-3">JavaScript (ES6+)</h3>
-                        <h3 class="fs-2 mb-4 fw-normal"><a id="main-p2" class="text-white link-p2"
-                                href="https://arbab57.github.io/onlineCourses/" target="_blank">MindMax:
-                                Maximizing Potential
-                                through Online Learning</a></h3>
-                        <p id="desc-p2" class="fs-5 text-muted-3 mb-4">I'm thrilled to have created an impactful
-                            learning experience
-                            that has already seen significant student engagement and success. It was a pleasure
-                            collaborating with the team to bring their vision to life!</p>
-                        <a id="view-p2" class="text-blue-1 fs-5 link-p2" href="https://arbab57.github.io/onlineCourses/"
-                            target="_blank">View
-                            Project</a>
-                    </div>
-
-
-                </div>
-
-                <div id="con-p3" class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
-
-                    <div id="imgSlide03" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide01"><a
-                            class="link-p3" href="https://arbab57.github.io/architecturesite/index.html"
-                            target="_blank"><img loading="lazy" id="img-p3" class="project-img"
-                                src="assets/projects/project-architecture.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 id="sub-p3" class="fs-6 text-muted-3 mb-3">BOOTSTRAP 5</h3>
-                        <h3 class="fs-2 mb-4 fw-normal"><a id="main-p3" class="text-white link-p3"
-                                href="https://arbab57.github.io/architecturesite/index.html"
-                                target="_blank">Constructing Excellence:
-                                Architecture Firm</a></h3>
-                        <p id="desc-p3" class="fs-5 text-muted-3 mb-4">Responsive design for a seamless user experience
-                            across
-                            devices.
-                            Interactive project gallery.
-                            Integrated blog for sharing industry insights and news
-                            Optimized performance for fast loading times</p>
-                        <a id="view-p3" class="text-blue-1 fs-5 link-p3"
-                            href="https://arbab57.github.io/architecturesite/index.html" target="_blank">View
-                            Project</a>
-                    </div>
-
-
-                </div>
-
-
-
-                <div id="con-p4" class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
-                    <div id="imgSlide04" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide04"><a
-                            class="link-p4" href="https://arbab57.github.io/bookstore/" target="_blank"><img
-                                loading="lazy" id="img-p4" class="project-img"
-                                src="assets/projects/project-ourtracks.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 id="sub-p4" class="fs-6 text-muted-3 mb-3">E-commerce</h3>
-                        <h3 class="fs-2 mb-4 fw-normal"><a id="main-p4" class="text-white link-p4"
-                                href="https://arbab57.github.io/bookstore/" target="_blank">The Book
-                                Haven: E-commerce
-                                Solution</a></h3>
-                        <p id="desc-p4" class="fs-5 text-muted-3 mb-4">Integrating the payment gateway and book catalog
-                            APIs.
-                            Optimizing the site for performance and scalability.
-                            Ensuring security and data privacy.</p>
-                        <a id="view-p4" class="text-blue-1 fs-5 link-p4" href="https://arbab57.github.io/bookstore/"
-                            target="_blank">View
-                            Project</a>
-                    </div>
-
-
-                </div>
-
-
-
-
-                <div id="con-p5" class="row justify-content-center gap-lg-5  p-lg-4  text-sm-start">
-
-                    <div id="imgSlide05" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide05"><a
-                            class="link-p5" href="https://arbab57.github.io/travel/" target="_blank"><img loading="lazy"
-                                id="img-p5" class="project-img" src="assets/projects/697-890.png" alt=""></a></div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 id="sub-p5" class="fs-6 text-muted-3 mb-3">FrameWroks</h3>
-                        <h3 class="fs-2 mb-4 fw-normal"><a id="main-p5" class="text-white link-p5"
-                                href="https://arbab57.github.io/travel/" target="_blank">TravelTech: AI-Powered
-                                Travel</a></h3>
-                        <p id="desc-p5" class="fs-5 text-muted-3 mb-4">Integrating data from various sources, such as
-                            flight APIs,
-                            hotel booking engines, and activity providers.Ensuring a seamless user experience across
-                            various devices and screen sizes.</p>
-                        <a id="view-p5" class="text-blue-1 fs-5 link-p5" href="https://arbab57.github.io/travel/"
-                            target="_blank">View
-                            Project</a>
-                    </div>
-
-
-                </div>
-
-                <div id="con-p6" class="row justify-content-center flex-row-reverse gap-lg-5 p-lg-4 text-sm-start">
-                    <div id="imgSlide06" class="col-xxl-4 col-lg-5 col-md-5 con-project-img hidden slide imgSlide06"><a
-                            class="link-p6" href="https://arbab57.github.io/portfolio2/" target="_blank"><img
-                                loading="lazy" id="img-p6" class="project-img"
-                                src="assets/projects/portfolio-practice.png" alt=""></a>
-                    </div>
-
-                    <div
-                        class="col-xl-6 col-md-6 d-flex flex-column justify-content-center p-sm-5 p-4 my-4 my-sm-0 hidden">
-
-                        <h3 id="sub-p6" class="fs-6 text-muted-3 mb-3">Portfolios</h3>
-                        <h3 class="fs-2 mb-4 fw-normal"><a id="main-p6" class="text-white link-p6"
-                                href="https://arbab57.github.io/portfolio2/" target="_blank">Empowering Innovaters:
-                                Portfolio</a></h3>
-                        <p id="desc-p6" class="fs-5 text-muted-3 mb-4">Clean, modern, and responsive design.
-                            High-quality images and graphics.
-                            Interactive elements, such as hover effects and animations.
-                            Easy navigation and clear information architecture.
-                            Mobile-friendly and accessible design.</p>
-                        <a id="view-p6" class="text-blue-1 fs-5 link-p6" href="https://arbab57.github.io/portfolio2/"
-                            target="_blank">View
-                            Project</a>
-                    </div>
-
+                <div id="project-container" class="project-container">
 
                 </div>
 
