--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,17 @@
                         <button id="next-btn" class="btn-page">&gt</button>
                     </div>
                 </div>
+                <div class="d-flex flex-column align-items-end">
+                    <select name="date-options" id="filters">
+                        <option value="all">Show all</option>
+                        <option value="js">JavaScript</option>
+                        <option value="react">React.js</option>
+                        <option value="frameworks">Tailwind & Bootstrap</option>
+                        <option value="old">Old First</option>
+                        <option value="new">New First</option>
+                    </select>
+
+                </div>
 
 
                 <div id="project-container" class="project-container">
