--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,7 @@
                         <option value="all">Show all</option>
                         <option value="js">JavaScript</option>
                         <option value="react">React.js</option>
+                        <option value="node">Node.js</option>
                         <option value="frameworks">Tailwind & Bootstrap</option>
                         <option value="old">Old First</option>
                         <option value="new">New First</option>
