--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
 
                         <div class="w-60 pb-5 text-center text-sm-start">
                             <h2 class="fs-2 text-white fw-light mb-3 fw-bold hidden">Profile</h2>
-                            <h3 class="fs-4 text-white fw-normal mb-3 line-he hidden">I'm a Frontend Developer from
+                            <h3 class="fs-4 text-white fw-normal mb-3 line-he hidden">I'm a FullStack(MERN) Developer from
                                 Rahim Yar
                                 Khan,
                                 Pakistan. I aim
@@ -91,7 +91,7 @@
                                 make a difference through my
                                 creative solutions.</h3>
                             <p class="fs-5 text-muted-3 line-he mb-5 hidden">With
-                                6 years of experience in the field, I'm dedicated to staying up-to-date with the
+                                plenty of experience in the field, I'm dedicated to staying up-to-date with the
                                 latest trends and technologies, ensuring my solutions are always modern, efficient, and
                                 scalable.</p>
 
@@ -131,9 +131,11 @@
                                         functional web applications.</p>
                                     <p class="text-muted-3 fs-5 fw-light  nowrap">Jan. 2024 - Present</p>
                                     <ul class="text-muted-3 fs-6">
-                                        <li>Built with HTML, CSS, JavaScript</li>
-                                        <li>Used Bootstrap for responsive design</li>
-                                        <li>Deployed on GitHub Pages</li>
+                                        <li>Built with HTML, CSS, JavaScript and React.js</li>
+                                        <li>Backend with Node.js</li>
+                                        <li>MongoDB as a Database</li>
+                                        <li>Used Bootstrap and Tailwind for responsive design</li>
+                                        <li>Deployed on GitHub Pages, Netlify, Heroku and AWS</li>
                                         <li><a href="portfolio.html">View Projects</a></li>
                                     </ul>
                                 </div>
@@ -280,7 +282,7 @@
                             <h2 class="fs-2 text-white fw-light mb-5">My skills</h2>
 
                             <div class="py-3 hidden hidden32">
-                                <h3 class="fs-4 text-white mb-3">CSS3</h3>
+                                <h3 class="fs-4 text-white mb-3">React.js</h3>
 
 
                                 <div id="containerSkillBar1" class="d-flex align-items-center w-100 gap-2 ">
@@ -298,7 +300,7 @@
                             </div>
 
                             <div class="py-3 hidden">
-                                <h3 class="fs-4 text-white mb-3">HTML</h3>
+                                <h3 class="fs-4 text-white mb-3">Node.js</h3>
 
 
                                 <div id="containerSkillBar1" class="d-flex align-items-center w-100 gap-2 ">
@@ -316,7 +318,7 @@
                             </div>
 
                             <div class="py-3 hidden">
-                                <h3 class="fs-4 text-white mb-3">Bootstrap 5</h3>
+                                <h3 class="fs-4 text-white mb-3">Bootstrap 5 and Tailwind</h3>
 
 
                                 <div id="containerSkillBar1" class="d-flex align-items-center w-100 gap-2 ">
