--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 
                             <form class="d-flex flex-column justify-content-between h-100 gap-md-0 gap-3" action="">
                                 <input class="w-100 py-3 px-3 input hidden" placeholder="Your Name" type="text">
-                                <input class="w-100 py-3 px-3 input hidden" placeholder="Your Emial" type="email">
+                                <input class="w-100 py-3 px-3 input hidden" placeholder="Your Email" type="email">
                                 <input class="w-100 py-3 px-3 input hidden" placeholder="Subject" type="text">
                                 <textarea rows="7" class="w-100  py-3 px-3 input" placeholder="Message" name=""
                                     id=""></textarea>
