--- a/resume.html
+++ b/resume.html
@@ -131,11 +131,16 @@
                                         functional web applications.</p>
                                     <p class="text-muted-3 fs-5 fw-light  nowrap">Jan. 2024 - Present</p>
                                     <ul class="text-muted-3 fs-6">
-                                        <li>Built with HTML, CSS, JavaScript and React.js</li>
+                                        <!-- <li>Built with HTML, CSS, JavaScript and React.js</li>
                                         <li>Backend with Node.js</li>
                                         <li>MongoDB as a Database</li>
                                         <li>Used Bootstrap and Tailwind for responsive design</li>
-                                        <li>Deployed on GitHub Pages, Netlify, Heroku and AWS</li>
+                                        <li>Deployed on GitHub Pages, Netlify, Heroku and AWS</li> -->
+                                        <li>Frontend built with React.js</li>
+                                        <li>Backend developed using Node.js and Express.js</li>
+                                        <li>Database managed with MongoDB</li>
+                                        <li>Styled with Bootstrap and Tailwind for responsive design</li>
+                                        <li>Deployed on GitHub Pages, Netlify, Heroku, and AWS</li>
                                         <li><a href="portfolio.html">View Projects</a></li>
                                     </ul>
                                 </div>
