--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,7 @@
                         <button id="one-btn" class="btn-page">1</button>
                         <button id="two-btn" class="btn-page">2</button>
                         <button id="three-btn" class="btn-page">3</button>
+                        <button id="four-btn" class="btn-page">4</button>
                         <button id="next-btn" class="btn-page">&gt</button>
                     </div>
                 </div>
