--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,8 @@
 
                         <div class="w-60 pb-5 text-center text-sm-start">
                             <h2 class="fs-2 text-white fw-light mb-3 fw-bold hidden">Profile</h2>
-                            <h3 class="fs-4 text-white fw-normal mb-3 line-he hidden">I'm a FullStack(MERN) Developer from
+                            <h3 class="fs-4 text-white fw-normal mb-3 line-he hidden">I'm a FullStack(MERN) Developer
+                                from
                                 Rahim Yar
                                 Khan,
                                 Pakistan. I aim
@@ -152,8 +153,20 @@
 
                         <div class="w-60 py-5 ">
                             <h2 class="fs-2 text-white fw-light mb-5 hidden">Education</h2>
+                            <div class="bord py-4 hidden">
+                                <div class="">
+                                    <h3 class="fs-4 text-white mb-2 ">Bachelor's of Computer Science <span
+                                            class="text-muted-3 fw-light">-
+                                            KFUEIT</span>
+                                        <h4 class="text-muted-3 fs-5 ">Rahim Yar Khan, Pakistan
+                                        </h4>
+                                        <p class="text-muted-3 fs-5 fw-light  nowrap ">
+                                            sept-2024 -
+                                            Present</p>
+                                        
 
-
+                                </div>
+                            </div>
 
                             <div class="bord py-4 hidden">
 
